--- a/packages/esm-loader-import-alias/package.json
+++ b/packages/esm-loader-import-alias/package.json
@@ -18,8 +18,7 @@
     "astring": "^1.8.6",
     "create-esm-loader": "^0.2.5",
     "esquery": "^1.5.0",
-    "meriyah": "^4.3.8",
-    "npm-run-all": "^4.1.5"
+    "meriyah": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
@@ -29,6 +28,7 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "node-esm-loader": "^0.2.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
