--- a/packages/esm-loader-import-meta-custom/package.json
+++ b/packages/esm-loader-import-meta-custom/package.json
@@ -15,8 +15,7 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "create-esm-loader": "^0.2.5",
-    "npm-run-all": "^4.1.5"
+    "create-esm-loader": "^0.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
@@ -26,6 +25,7 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "node-esm-loader": "^0.2.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
