--- a/packages/esm-loader-mock-exports/package.json
+++ b/packages/esm-loader-mock-exports/package.json
@@ -20,8 +20,7 @@
     "esquery": "^1.5.0",
     "estree-walker": "^3.0.3",
     "klona": "^2.0.6",
-    "meriyah": "^4.3.8",
-    "npm-run-all": "^4.1.5"
+    "meriyah": "^4.3.8"
   },
   "devDependencies": {
     "@types/estree": "^1.0.4",
@@ -32,6 +31,7 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "node-esm-loader": "^0.2.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "tsc-watch": "^6.0.4",
